--- a/index.html
+++ b/index.html
@@ -304,20 +304,20 @@
   </header>
   <div class="media-container">
     <!-- Photos -->
-    <div class="media"><img src="images/Traning Images/1.png" alt="Photo 1"></div>
-    <div class="media"><img src="images/Traning Images/3.png" alt="Photo 2"></div>
-    <div class="media"><img src="images/Traning Images/5.png" alt="Photo 3"></div>
+    <div class="media"><img src="images/1.png" alt="Photo 1"></div>
+    <div class="media"><img src="images/3.png" alt="Photo 2"></div>
+    <div class="media"><img src="images/5.png" alt="Photo 3"></div>
 
     <!-- Videos -->
     <div class="media">
       <video autoplay loop muted playsinline>
-        <source src="images/Traning Videos/2.mp4" type="video/mp4">
+        <source src="images/2.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
     <div class="media">
       <video autoplay loop muted playsinline>
-        <source src="images/Traning Videos/3.mp4" type="video/mp4">
+        <source src="images/3.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
