--- a/index.html
+++ b/index.html
@@ -311,13 +311,13 @@
     <!-- Videos -->
     <div class="media">
       <video autoplay loop muted playsinline>
-        <source src="images/2.mp4" type="video/mp4">
+        <source src="v1/2.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
     <div class="media">
       <video autoplay loop muted playsinline>
-        <source src="images/3.mp4" type="video/mp4">
+        <source src="v2/3.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
