--- a/index.html
+++ b/index.html
@@ -304,9 +304,9 @@
   </header>
   <div class="media-container">
     <!-- Photos -->
-    <div class="media"><img src="images/1.png" alt="Photo 1"></div>
-    <div class="media"><img src="images/3.png" alt="Photo 2"></div>
-    <div class="media"><img src="images/5.png" alt="Photo 3"></div>
+    <div class="media"><img src="v2/1.png" alt="Photo 1"></div>
+    <div class="media"><img src="v2/3.png" alt="Photo 2"></div>
+    <div class="media"><img src="v2/5.png" alt="Photo 3"></div>
 
     <!-- Videos -->
     <div class="media">
